# keithschulze

./: .gitignore  README.md  about.md  index.html  keithschulze.cabal  package-lock.json  package.json  site.hs  stack.yaml
css/: colour.less  default.less  syntax.less
deploy/: deploy.sh  s3-website.yaml
drafts/: 2018-05-01-hakyll.md  2018-05-08-verification-microservice.md
drafts/Hakyll/: 2018-11-30-hakyll.md
drafts/imgrs/: 2019-04-05-img-rust-part1.md
notebooks/: 2019-04-05-img-rust-part1.ipynb
posts/: 2015-12-07-tu-quoque.markdown  2018-04-05-mytardis-apps.md  2018-05-01-hakyll.md  2019-04-11-functional-img-rust-part1.md
src/KS/: Config.hs
templates/: archive.html  default.html  post-list.html  post-teaser.html  post.html  tag.html
