name:               keithschulze
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  KS.Config
  build-depends:    base == 4.*
                  , hakyll
  default-language: Haskell2010


executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , blaze-html
                  , process
                  , filepath
                  , hakyll
                  , keithschulze
                  , pandoc-types
                  , pandoc
                  , regex-tdfa
                  , tagsoup
  ghc-options:      -threaded
  default-language: Haskell2010
